--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "predev": "npm --workspace @trip-master/shared run build",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc -b",
     "start": "node dist/index.js"
