--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -16,6 +16,10 @@ services:
     environment:
       - PORT=4000
       - MONGODB_URI=mongodb://mongodb:27017/travelplanner
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET:-prod-access-secret}
+      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-prod-refresh-secret}
+      - COOKIE_SECURE=${COOKIE_SECURE:-false}
+      - APP_BASE_URL=${APP_BASE_URL:-http://localhost:5173}
     depends_on:
       - mongodb
     ports:
