--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
     "@trip-master/shared": "file:../../packages/shared",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -23,6 +28,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.0",
     "vite": "^5.2.0"
   }
