--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
     "@trip-master/shared": "file:../../packages/shared",
+    "@radix-ui/react-popover": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.5.3"
