Add mongo express

--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -1,12 +1,26 @@
 version: "3.9"
 services:
   mongodb:
-    image: mongo:7
+    image: mongo:8.0
     restart: unless-stopped
     ports:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
+    networks:
+      - appnet
+  
+  mongo-express:
+    image: mongo-express:1.0.2
+    container_name: tracker-mongo-express
+    restart: unless-stopped
+    environment:
+      ME_CONFIG_MONGODB_URL: mongodb://mongodb:27017
+      ME_CONFIG_BASICAUTH: "false"
+    ports:
+      - '8080:8081'
+    depends_on:
+      - mongodb
     networks:
       - appnet
 
