--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
   mongodb:
+    container_name: trip-master-mongodb
     image: mongo:8.0
     restart: unless-stopped
     ports:
@@ -12,13 +13,13 @@ services:
   
   mongo-express:
     image: mongo-express:1.0.2
-    container_name: tracker-mongo-express
+    container_name: trip-master-mongo-express
     restart: unless-stopped
     environment:
-      ME_CONFIG_MONGODB_URL: mongodb://mongodb:27017
+      ME_CONFIG_MONGODB_URL: mongodb://trip-master-mongodb:27017
       ME_CONFIG_BASICAUTH: "false"
     ports:
-      - '8080:8081'
+      - '8082:8081'
     depends_on:
       - mongodb
     networks:
